# ilbm-thumb-kde

./: CMakeLists.txt  README.md  ilbm.thumbnailer  ilbmcreator.cpp  ilbmcreator.h  ilbmthumbnail.desktop  ilbmthumbnail.json  main.cpp
.github/workflows/: clang.yml  tests.yml
test/: CMakeLists.txt  main.cpp  test.iff
